<resources>
    <string name="app_name">minnou</string>
    <string name="developer">hackingchips.com</string>
    <string name="less_button">-</string>
    <string name="more_button">+</string>
    <string name="start_button">Play</string>
    <string name="reset_button">Reset\nlevel</string>
    <string name="level_label">Level:</string>
    <string name="level_value">00</string>
    <string name="time_label">Time: 00:00:00</string>
    <string name="moves_label">Moves: 0000</string>
    <string name="time_label_text">Time:</string>
    <string name="moves_label_text">Moves:</string>
    <string name="info_text">   </string>
    <string name="start_text">Play</string>
    <string name="stop_text">Stop</string>
</resources>